--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Maven
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-name: Java CI with Maven
+name: Java CI with Gradle
 
 on:
   push:
@@ -21,8 +18,10 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+    - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+    - name: Build with Gradle
+        run: ./gradlew build
     - name: Upload a JAR Artifact
       uses: actions/upload-artifact@v2.2.3
       with:
