--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'java'
-//    id "org.jetbrains.grammarkit" version "2021.1.3"
 }
 
 group 'org.cqu'
@@ -17,25 +16,14 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.10.0'
 }
 
-//apply plugin: 'org.jetbrains.grammarkit'
-
-// import is optional to make task creation easier
-//import org.jetbrains.grammarkit.tasks.*
-//
-//task generatePerlLexer(type: GenerateLexer) {
-//    // source flex file
-//    source = "src/main/java/lex/XiLexer.flex"
-//
-//    // target directory for lexer
-//    targetDir = "src/main/java/lex"
-//
-//    // target classname, target file will be targetDir/targetClass.java
-//    targetClass = "XiLexer"
-//
-//    // if set, plugin will remove a lexer output file before generating new one. Default: false
-//    purgeOldFiles = true
-//}
-
+task customFatJar(type: Jar) {
+    manifest {
+        attributes 'Main-Class': 'cli.CLI'
+    }
+    baseName = 'all-in-one-jar'
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
+}
 
 test {
     useJUnitPlatform()
