--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     implementation 'info.picocli:picocli:4.6.1'
     implementation group: 'commons-io', name: 'commons-io', version: '2.10.0'
+    runtime fileTree('libs') { include '*.jar' }
 }
 
 task customFatJar(type: Jar) {
